kubernetes/.deprecated/pihole/pihole.yaml
# ---
# kind: PersistentVolumeClaim
# apiVersion: v1
# metadata:
#   name: pihole-claim
#   namespace: nextcloud
# spec:
#   accessModes:
#   - ReadWriteMany
#   storageClassName: local-storage
#   selector:
#     matchLabels:
#       contenttype: "db"
#   resources:
#     requests:
#       storage: 30Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: network
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      # volumes:
      # - name: mycnf-volume
      #   configMap:
      #     name: mycnf
      #     items:
      #     - key: my.cnf
      #       path: my.cnf
      # - name: pihole
      #   persistentVolumeClaim:
      #     claimName: pihole-claim
      containers:
      - name: pihole
        image: pihole/pihole
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        ports:
        - containerPort: 53
        - containerPort: 80
        # - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: network
spec:
  ports:
  - name: webui
    port: 80
    targetPort: 80
  selector:
    app: pihole
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-dns
  namespace: network
spec:
  ports:
  - name: dns
    port: 53
    targetPort: 53
  selector:
    app: pihole
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: network
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: pihole-ui.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: pihole
          servicePort: 80
  - host: pihole.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: pihole-dns
          servicePort: 53
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: piholeingress-dns
#   namespace: network
#   # annotations:
#   #   kubernetes.io/ingress.class: traefik
# spec:
#   rules:
#   - host: pihole-dns.bas
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: pihole-dns
#           servicePort: 443
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-dns-local
  namespace: network
spec:
  ports:
  - name: dns
    port: 53
    targetPort: 53
    nodePort: 32453
  selector:
    app: pihole
  type: NodePort
